# zkrand

./: .env.example  .env.example.admin  .env.example.deploy  .env.example.node  .gitignore  Cargo.toml  README.md  benchmark.md  clean.sh  demo-config.json  docker-compose.yml  download_params.sh  entrypoint.sh  hardhat.config.js  hardhat.config.ts  package.json  tsconfig.json
benches/: dkg_benchmark.rs  dvrf_benchmark.rs
contracts/: GlobalPublicParams.sol  Halo2Verifier-3-5-g2.sol  Halo2Verifier.sol  Halo2VerifyingKey-3-5-18-g2.sol  Halo2VerifyingKey-3-5-18.sol  IPseudoRand.sol  PseudoRand.sol  lottery.sol  zkdvrf.sol  zkdvrf_pre.sol
contracts/libs/: Grumpkin.sol  Hash.sol  ModExp.sol  Pairing.sol
data/: config.toml
examples/: verifier.rs  verifier_combi.rs  verifier_combi_full.rs
ops/: docker-compose.yml
ops/docker/: Dockerfile.admin  Dockerfile.init  Dockerfile.node
scripts/: admin.ts  deploy.ts  nidkg.ts  random.ts  register.ts  utils.ts
scripts/demo/: admin.ts  nidkg.ts  random.ts  register.ts
scripts/lottery/: admin.ts  deploy.ts  play.ts
services/: admin.ts  node.ts
services/exec/: run.ts  runNode.ts
specs/: overview.md
src/: base_field_chip.rs  dkg.rs  dkg_circuit.rs  dkg_n.rs  ecc_chip.rs  error.rs  grumpkin_chip.rs  hash_to_curve.rs  hash_to_curve_evm.rs  lib.rs  poseidon.rs  utils.rs
src/base_field_chip/: bn256.rs  fix_mul.rs
src/ecc_chip/: bn256.rs  integer2.rs  point2.rs  point2_base_chip.rs  point_base_chip.rs
src/ecc_chip/point2_base_chip/: add.rs  fix_mul.rs
src/ecc_chip/point_base_chip/: bn256.rs  fix_mul.rs
src/grumpkin_chip/: add.rs  mul.rs
src/poseidon/: bn256.rs
test/: bak.py  dkg-gpp.py  dkg-verifier.py  hash.py  pseudo.py  simple.py  zkdvrf.spec.ts  zkdvrf_pre.spec.ts
