[package]
name = "zkdvrf"
version = "0.1.0"
authors = ["Jia Liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
halo2_gadgets = { git = "https://github.com/kitounliu/halo2.git", branch = "grumpkin"}
halo2wrong = { git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin"}
halo2_ecc ={ package = "ecc", git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin"}
halo2_maingate =  { package = "maingate", git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin"}

#halo2wrong = { path = "../halo2wrong/halo2wrong"}
#halo2_ecc = { package = "ecc", path = "../halo2wrong/ecc"}
#halo2_maingate = { package = "maingate", path = "../halo2wrong/maingate"}

sha3 = "0.9.1"
rand_core = { version = "0.6", default-features = false }
static_assertions = "1.1.0"
subtle = "2.4"
blake2b_simd = "1"
log = "0.4"
anyhow = "1.0"

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
rand_chacha = "0.3.1"
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.9.0"
halo2_solidity_verifier = { git = "https://github.com/kitounliu/halo2-solidity-verifier.git", branch = "grumpkin", features = ["evm"] }
#snark-verifier = { path = "../local/snark-verifier/snark-verifier" }

[features]
default = []
g2chip = []

[[bench]]
name = "dvrf_benchmark"
harness = false

#[[bench]]
#name = "dkg_benchmark"
#harness = false

#[[bench]]
#name = "bn_benchmark"
#harness = false