[package]
name = "zkrand"
version = "0.1.0"
authors = ["Jia Liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
halo2_gadgets = { git = "https://github.com/kitounliu/halo2.git", branch = "grumpkin" }
halo2wrong = { git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin" }
halo2_ecc = { package = "ecc", git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin" }
halo2_maingate = { package = "maingate", git = "https://github.com/kitounliu/halo2wrong.git", branch = "grumpkin" }
halo2_proofs = { git = "https://github.com/kitounliu/halo2.git", branch = "grumpkin" }

sha3 = "0.10"
rand_core = { version = "0.6", default-features = false }
static_assertions = "1.1.0"
subtle = "2.4"
blake2b_simd = "1"
log = "0.4"
anyhow = "1.0"
itertools = "0.10.3"
serde = { version = "1.0.193", features = ["derive"] }

# for client
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.108"
rand_chacha = "0.3.1"
ark-std = { version = "0.3", features = ["print-trace"] }
halo2_solidity_verifier = { git = "https://github.com/kitounliu/halo2-solidity-verifier.git", branch = "grumpkin", features = ["evm"] }
const_format = "0.2.32"
pretty_env_logger = "0.5.0"
thiserror = "1.0"
hex = "0.4.3"
dotenv = "0.15"

[dev-dependencies]
rand_chacha = "0.3.1"
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.9.0"


[features]
default = ['g2chip']
g2chip = []

[lib]
name = "zkrand"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bench]]
name = "dvrf_benchmark"
harness = false

#[[bench]]
#name = "dkg_benchmark"
#harness = false

#[[bench]]
#name = "bn_benchmark"
#harness = false